--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,22 +8,17 @@
   </head>
 
   <body>
-    <!-- header section -->
+    <!-- секция заголовка -->
     <header>
       <nav>
-        <a href="./"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+        <a href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <ul>
-          <li>
-            <a href="">Студия</a>
-          </li>
-          <li>
-            <a href="">Портфолио</a>
-          </li>
-          <li>
-            <a href="">Контакты</a>
-          </li>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
+
       <ul>
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -34,8 +29,9 @@
       </ul>
     </header>
 
+    <!-- основная секция -->
     <main>
-      <!-- main slogan -->
+      <!-- герой -->
       <div>
         <h1>
           Эффективные решения <br />
@@ -44,109 +40,86 @@
         <button type="button">Заказать услугу</button>
       </div>
 
-      <!-- about us section -->
+      <!-- Особенности -->
       <section>
-        <div>
-          <h2>Наши качества</h2>
-          <ul>
-            <li>
-              <h3>Внимание к деталям</h3>
-              <p>
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h3>Пунктуальность</h3>
-              <p>
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h3>Планирование</h3>
-              <p>
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
-            </li>
-            <li>
-              <h3>Современные технологии</h3>
-              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-          </ul>
-        </div>
-
-        <div>
-          <h2>Чем мы занимаемся</h2>
-          <ul>
-            <li>
-              <a href="">
-                <img src="./images/img1.jpg" alt="вёрстка сайта" width="370" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/img2.jpg" alt="дизайн мобильных приложений" width="370" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/img3.jpg" alt="выбор цветовой гаммы" width="370" />
-              </a>
-            </li>
-          </ul>
-        </div>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
       </section>
 
-      <!-- our team section -->
+      <!-- Чем мы занимаемся -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./images/img1.jpg" alt="вёрстка сайта" width="370" height="294" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/img2.jpg" alt="дизайн мобильных приложений" width="370" height="294" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/img3.jpg" alt="выбор цветовой гаммы" width="370" height="294" />
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- наша команда -->
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <figure>
-              <img src="./images/empl1.jpg" alt="сотрудник компании мужчина" width="270" />
-              <figcaption>
-                <p>Игорь Демьяненко</p>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/empl1.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
+            <p>Игорь Демьяненко</p>
+            <p>Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/empl2.jpg" alt="сотрудник компании женщина" width="270" />
-              <figcaption>
-                <p>Ольга Репина</p>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/empl2.jpg" alt="сотрудник компании женщина" width="270" height="260" />
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/empl3.jpg" alt="сотрудник компании мужчина" width="270" />
-              <figcaption>
-                <p>Николай Тарасов</p>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img src="./images/empl3.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
+            <p>Николай Тарасов</p>
+            <p>Marketing</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/empl4.jpg" alt="сотрудник компании мужчина" width="270" />
-              <figcaption>
-                <p>Михаил Ермаков</p>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/empl4.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
+            <p>Михаил Ермаков</p>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <!-- footer section -->
+    <!-- нижний колонтитул -->
     <footer>
-      <a href="./"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+      <a href="./index.html"><span class="logo-web">Web</span>Studio</a>
+
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+
       <ul>
-        <li>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
-        </li>
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
