add lang attribute

--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
           <li>
             <img src="./images/empl1.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
             <p>Игорь Демьяненко</p>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/empl2.jpg" alt="сотрудник компании женщина" width="270" height="260" />
             <p>Ольга Репина</p>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/empl3.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
             <p>Николай Тарасов</p>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/empl4.jpg" alt="сотрудник компании мужчина" width="270" height="260" />
             <p>Михаил Ермаков</p>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
