--- a/index.html
+++ b/index.html
@@ -116,17 +116,21 @@
     <!-- нижний колонтитул -->
     <footer>
       <a href="./index.html"><span class="logo-web">Web</span>Studio</a>
-
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/2VdXaHQesthj9XHVA" target="_blank" rel="noreferrer noopener"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
